syntax = "proto3";

package wallet.v1;

option go_package = "github.com/charlesonunze/wallet-service/pb/v1;walletpb";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "validate/validate.proto";

service WalletService {
  // Credit a user's wallet
  rpc CreditUser(CreditUserRequest) returns (CreditUserResponse) {};

  // Debit from a user's wallet
  rpc DebitUser(DebitUserRequest) returns (DebitUserResponse) {};

  // Get a user's wallet balance
  rpc GetUserBalance(GetUserBalanceRequest) returns (GetUserBalanceResponse) {};
}

message CreditUserRequest {
  int64 user_id = 1 [(validate.rules).int64 = { ignore_empty: true }];
  int64 amount  = 2 [(validate.rules).int64 = { ignore_empty: true }];
}

message DebitUserRequest {
  int64 user_id = 1 [(validate.rules).int64 = { ignore_empty: true }];
  int64 amount  = 2 [(validate.rules).int64 = { ignore_empty: true }];
}

message GetUserBalanceRequest {
  int64 user_id = 1 [(validate.rules).int64 = { ignore_empty: true }];
}

message CreditUserResponse {
  int64 balance = 1;
}

message DebitUserResponse {
  int64 balance = 1;
}

message GetUserBalanceResponse {
  int64 balance = 1;
}